# SPDX-FileCopyrightText: 2025 LichtFeld Studio Authors
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "360_record"
version = "1.1.0"
description = "Record camera path videos - circular orbits and linear walkthrough paths"
author = "Jacob van Beets"
min_lichtfeld_version = "0.5.0"

dependencies = [
    "numpy",
    "imageio[pyav]",
]

[tool.lichtfeld]
auto_start = true
hot_reload = true
